<resources>
    <string name="app_name">RRM E-News</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="world_news">World News</string>
    <string name="bangla">বাংলা সংবাদপত্র</string>
    <string name="business_news">Business News</string>
    <string name="sports">Sports</string>
    <string name="technologies">Technologies</string>
    <string name="entertainment">Entertainment</string>
    <string name="politics">Politics</string>
    <string name="strange_news">Strange News</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_devs">About Us</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="company_info_details">RRMSENSE Global Systech Limited was founded in the early 2015 by the Chairman of the RRM Group. Born out of the need for IT support of the different concerns of RRM Group, the Chairman Sumon Chowdhury has put together a potential IT team. The team has excelled in ensuring the needs of the concerns of RRM Group and also started providing the IT Solutions globally.</string>
    <string name="refresh">Refresh</string>
    <string name="company_name">RRM Sense Global Systech Ltd.</string>
    <string name="company_information">Company Information</string>
    <string name="developer_name">A. S. M. Sayem</string>
    <string name="website">Website: http://www.rrmsense.com</string>
    <string name="dev_info">Developer Information</string>
</resources>
